# pyown

./: .gitignore  CAMERA_IMPLEMENTATION.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cleanup.yml  codeql.yml  docs.yml  publish.yml  test.yml
docs/: index.md
docs/api/: client.md  exceptions.md  index.md  protocol.md  tags.md
docs/api/items/: base.md  energy.md  gateway.md
docs/original/: README.md  hmac.md  intro.md  who0.md  who1.md  who13.md  who15-25.md  who17.md  who18.md  who2.md  who22.md  who24.md  who25.md  who4.md  who5.md  who7.md
examples/: README.md
examples/automation_01/: main.py
examples/automation_02/: main.py
examples/basic_01/: README.md  main.py
examples/camera_01/: main.py
examples/custom_message_01/: README.md  main.py
examples/custom_message_02/: main.py
examples/energy_management_01/: main.py
examples/energy_management_02/: main.py
examples/gateway_01/: main.py
examples/gateway_02/: main.py
examples/light_01/: main.py
examples/light_02/: README.md  main.py
pyown/: __main__.py  client.py  exceptions.py  message.py
pyown/auth/: __init__.py  enum.py  hmac.py  open.py
pyown/client/: __init__.py  base.py  client.py  session.py
pyown/constants/: who.py
pyown/events/: __init__.py  bus.py  event.py  registry.py
pyown/items/: __init__.py  base.py  utils.py
pyown/items/automation/: __init__.py  automation.py  events.py
pyown/items/camera/: __init__.py  camera.py  events.py
pyown/items/energy/: __init__.py  actuator.py  base.py  dataclass.py  energy.py  enums.py  events.py  power_meter.py  stop_go.py
pyown/items/gateway/: __init__.py  events.py  gateway.py
pyown/items/light/: __init__.py  base.py  dimmer.py  light.py
pyown/items/lighting/: __init__.py  base.py  dimmer.py  events.py  light.py
pyown/items/temperature/: __init__.py  events.py  thermo.py
pyown/messages/: __init__.py  ack.py  base.py  dimension.py  nack.py  normal.py  status.py
pyown/protocol/: __init__.py  protocol.py  session.py
pyown/tags/: __init__.py  base.py  dimension.py  what.py  where.py  who.py
tests/client/: test_client.py
tests/events/: _helpers.py  test_bus.py  test_client_dispatch.py  test_parser_automation.py  test_parser_camera.py  test_parser_energy.py  test_parser_gateway.py  test_parser_lighting.py  test_registry.py
tests/items/: __init__.py  test_camera.py
tests/messages/: test_ack.py  test_dimension.py  test_nack.py  test_normal.py  test_status.py
tests/protocol/: test_protocol.py  test_session.py
tests/tags/: test_tag.py
