[tool.poetry]
name = "pyown"
version = "0.1.0"
description = "Python wrapper for OpenWebNet protocol"
authors = ["John Toniutti <john.toniutti@gmail.com>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/jotonedev/pyown"
keywords = ["openwebnet", "myhome", "bticino", "wrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
