[project]
name = "pyown"
version = "0.4.2"
description = "Python wrapper for OpenWebNet protocol"
authors = [{ name = "John Toniutti", email = "john.toniutti@gmail.com" }]
requires-python = ">=3.11.4"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = [
    "openwebnet",
    "myhome",
    "bticino",
    "legrand",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
repository = "https://github.com/jotonedev/pyown"
documentation = "https://jotonedev.github.io/pyown/"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.40",
    "pytest>=8.3,<10.0",
    "pytest-cov>=5,<8",
    "pytest-asyncio>=0.24,<2.0",
    "pytest-timeout>=2.3.1",
]
docs = [
    "mkdocs~=1.6",
    "mkdocstrings-python>=1.12,<3.0",
    "mkdocs-material[imaging]~=9.5",
    "mkdocs-git-revision-date-localized-plugin~=1.3",
    "griffe-inherited-docstrings~=1.0",
    "mkdocs-awesome-nav>=3.1.2",
]

[tool.uv]
package = true
default-groups = [
    "dev",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "--strict-markers -ra"
timeout = 30
timeout_method = "thread"

[tool.coverage.run]
source = ["pyown"]
branch = true
omit = ["pyown/*/__main__.py", "pyown/*/__init__.py", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
exclude = ["__init__.py"]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "D", "PLC0415"]
ignore = ["D417", "D107", "D105", "D100", "E731"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"*_test.py" = ["D"]
